Update yang-data-api tests
Use List.of()/Map.of() instead of Collections and Guava where
appropriate.

Change-Id: Ibb3e9948d0b48bbba0a5f18c5313c93ade01223a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>